--- a/style.css
+++ b/style.css
@@ -1,39 +1,21 @@
-
-body{
-    background-color: pink;
+img {
+    height: 150px;
 }
-
-/*------------------------------------------
-  Responsive Grid Media Queries - 1280, 1024, 768, 480
-   1280-1024   - desktop (default grid)
-   1024-768    - tablet landscape
-   768-480     - tablet 
-   480-less    - phone landscape & smaller
---------------------------------------------*/
-@media all and (min-width: 1024px) and (max-width: 1280px) { 
-    body{
-        background-color: red;
-        transition: background-color 0.5s, color 0.5s;
-    }
+.description {
+    font-size: 20px;
 }
- 
-@media all and (min-width: 768px) and (max-width: 1024px) { 
-    body{
-        background-color: green;
-        transition: background-color 0.5s, color 0.5s;
-    }
+#cook-time {
+    font-weight: bold;
 }
- 
-@media all and (min-width: 480px) and (max-width: 768px) { 
-    body{
-        background-color: blue;
-        transition: background-color 0.5s, color 0.5s; 
-    }
+.ingredients {
+    list-style: square;
 }
- 
-@media all and (max-width: 480px) { 
-    body{
-        background-color: yellow;
-        transition: background-color 0.5s, color 0.5s; 
-    }
+.time {
+    color: gray;
+}
+.citation {
+    color: SeaGreen;
+}
+h1, h2, p {
+    font-family: Helvetica;
 }
