--- a/style4.css
+++ b/style4.css
@@ -13,27 +13,27 @@ body{
 @media all and (min-width: 1024px) and (max-width: 1280px) { 
     body{
         background-color: red;
-        transition: background-color 0.5s, color 0.5s;
+        transition: background-color 0.5s, color 0.5s; /* Smooth transition */
     }
 }
  
 @media all and (min-width: 768px) and (max-width: 1024px) { 
     body{
         background-color: green;
-        transition: background-color 0.5s, color 0.5s;
+        transition: background-color 0.5s, color 0.5s; /* Smooth transition */
     }
 }
  
 @media all and (min-width: 480px) and (max-width: 768px) { 
     body{
         background-color: blue;
-        transition: background-color 0.5s, color 0.5s; 
+        transition: background-color 0.5s, color 0.5s; /* Smooth transition */
     }
 }
  
 @media all and (max-width: 480px) { 
     body{
         background-color: yellow;
-        transition: background-color 0.5s, color 0.5s; 
+        transition: background-color 0.5s, color 0.5s; /* Smooth transition */
     }
 }
